# fasih

./: .gitignore  Cargo.toml  README.md
migrations/: 001_init.sql
src/: ai_client.rs  database.rs  handlers.rs  main.rs  models.rs
static/: index.html  script.js  style.css
